[package]
name = "evm_rpc"
version = "2.3.0"
description = "Interact with EVM blockchains from the Internet Computer."
authors = ["DFINITY Foundation"]
readme = "README.md"
edition = "2021"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"

[dependencies]
candid = { workspace = true }
canhttp = { path = "canhttp", features = ["json", "multi"] }
ethnum = { workspace = true }
evm_rpc_types = { path = "evm_rpc_types" }
getrandom = { workspace = true }
http = { workspace = true }
ic-ethereum-types = "1.0.0"
ic-metrics-encoder = { workspace = true }
ic-stable-structures = { workspace = true }
ic-canister-log = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
maplit = "1.0"
minicbor = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = {workspace = true}
thiserror = { workspace = true }
thousands = "0.2"
tower = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "util"] }
url = { workspace = true }
hex = "0.4"
ethers-core = "2.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
regex = "1.11"

[dev-dependencies]
assert_matches = "1.5"
candid_parser = { workspace = true }
ic-crypto-test-utils-reproducible-rng = { git = "https://github.com/dfinity/ic", rev = "release-2024-09-26_01-31-base" }
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", rev = "release-2024-09-26_01-31-base" }
maplit = "1"
pocket-ic = "7.0.0"
proptest = { workspace = true }
rand = "0.8"

[workspace.dependencies]
assert_matches = "1.5.0"
candid = { version = "0.10.13" }
candid_parser = { version = "0.1.4" }
ciborium = "0.2.2"
ethnum = { version = "1.5.0", features = ["serde"] }
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4.3"
http = "1.3.1"
ic-canister-log = "0.2.0"
ic-cdk = "0.17.1"
ic-cdk-bindgen = "0.1"
ic-cdk-macros = "0.17.1"
ic-certified-map = "0.4"
ic-metrics-encoder = "1.1"
ic-stable-structures = "0.6.8"
itertools = "0.14.0"
maplit = "1.0.2"
minicbor = { version = "0.25.1", features = ["alloc", "derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
pin-project = "1.1.10"
proptest = "1.6.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.17"
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
tokio = "1.44.1"
tower = "0.5.2"
tower-layer = "0.3.3"
tower-http = "0.6.2"
thiserror = "2.0.12"
url = "2.5"

[workspace]
members = ["canhttp", "e2e/rust", "evm_rpc_types"]
