[package]
name = "canhttp"
version = "0.1.1"
description = "Rust library to issue HTTPs outcalls from a canister on the Internet Computer"
license = "Apache-2.0"
readme = "README.md"
authors = ["DFINITY Foundation"]
edition = "2021"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
repository = "https://github.com/dfinity/evm-rpc-canister"
documentation = "https://docs.rs/canhttp"

[dependencies]
assert_matches = { workspace = true }
ciborium = { workspace = true, optional = true }
ic-cdk = { workspace = true }
ic-error-types = { workspace = true }
sha2 = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
futures-util = { workspace = true }
http = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
pin-project = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tower = { workspace = true, features = ["retry"] }
tower-layer = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["http"]
http = ["dep:http", "dep:num-traits", "dep:tower-layer"]
json = ["http", "dep:serde", "dep:serde_json"]
multi = ["dep:ciborium", "dep:sha2", "dep:futures-channel"]